@@ -1,3 +1,8 @@
+2012-02-17  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclIOUtil.c: [Bug 2233954] AIX: compile error
+	* unix/tclUnixPort.h:
+
 2012-02-15  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclCompCmds.c (TclCompileDictForCmd): [Bug 3487626]: Fix
